--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -11,10 +11,16 @@
             android:icon="@drawable/ic_class_black_24dp"
             android:title="Notebook" />
 
+
     </group>
 
+    <item
+        android:icon="@drawable/ic_settings_black_24dp"
+        android:id="@+id/settings"
+        android:title="Settings"  />
+
     <!--<item android:title="Communicate">-->
-        <!--<menu>-->
+        <!--<menu >-->
             <!--<item-->
                 <!--android:id="@+id/nav_share"-->
                 <!--android:icon="@drawable/ic_menu_share"-->
@@ -25,5 +31,6 @@
                 <!--android:title="Send" />-->
         <!--</menu>-->
     <!--</item>-->
+
 
 </menu>
