Add google search fragment

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -11,7 +11,10 @@
             android:icon="@drawable/ic_class_black_24dp"
             android:title="Notebook" />
 
-
+        <item
+            android:id="@+id/google"
+            android:icon="@drawable/ic_search_black_24dp"
+            android:title="Google"/>
     </group>
 
     <item
