--- a/app/src/main/res/layout/activity_notebook.xml
+++ b/app/src/main/res/layout/activity_notebook.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.andhikasrimadeva.myapp.NotebookFragment"
+    tools:context="com.andhikasrimadeva.myapp.notebook.NotebookFragment"
     android:id="@+id/activity_notebook">
 
     <ListView
