--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -7,13 +7,11 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     android:id="@+id/content_main">
 
-    <TextView
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:text="HOME"
-        android:textSize="36dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <android.support.v4.view.ViewPager
+        android:id="@+id/main_viewPager"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
+    </android.support.v4.view.ViewPager>
 
 </RelativeLayout>
