--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -7,9 +7,9 @@
         <!--android:title="@string/action_settings"-->
         <!--app:showAsAction="always" />-->
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/action_users"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
-        app:showAsAction="always" />
+        android:title="@string/all_users"
+        app:showAsAction="never" />
 
 </menu>
