--- a/app/src/main/res/layout/single_user_layout.xml
+++ b/app/src/main/res/layout/single_user_layout.xml
@@ -7,7 +7,7 @@
     <de.hdodenhof.circleimageview.CircleImageView
         android:layout_width="64dp"
         android:layout_height="64dp"
-        app:srcCompat="@drawable/ic_face_black_64dp"
+        android:src="@drawable/ic_face_black_64dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
@@ -26,7 +26,7 @@
         android:layout_toEndOf="@+id/user_single_image"
         android:layout_toRightOf="@+id/user_single_image"
         android:text="Default Name"
-        android:textSize="24sp"
+        android:textSize="20sp"
         android:textStyle="bold" />
 
 </RelativeLayout>
