--- a/app/src/main/res/layout/message_single_layout.xml
+++ b/app/src/main/res/layout/message_single_layout.xml
@@ -8,6 +8,7 @@
     android:weightSum="10">
 
     <de.hdodenhof.circleimageview.CircleImageView
+        android:visibility="gone"
         android:id="@+id/message_profile_layout"
         android:layout_width="36dp"
         android:layout_height="36dp"
@@ -21,12 +22,13 @@
         android:layout_below="@+id/name_text_layout"
         android:layout_marginLeft="10dp"
         android:layout_toEndOf="@+id/message_profile_layout"
-        android:padding="0dp"
+        android:padding="10dp"
         android:text="Message Text"
         android:textColor="#444444"
-        android:textSize="14sp" />
+        android:textSize="16sp" />
 
     <TextView
+        android:visibility="gone"
         android:id="@+id/name_text_layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -39,6 +41,7 @@
         android:textStyle="bold" />
 
     <TextView
+        android:visibility="gone"
         android:id="@+id/time_text_layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
