--- a/app/src/main/res/layout/notebook_note.xml
+++ b/app/src/main/res/layout/notebook_note.xml
@@ -13,12 +13,11 @@
         android:id="@+id/list_note_title"/>
 
     <TextView
+        android:id="@+id/list_note_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="Small Text"
-        android:id="@+id/list_note_date"
-        />
+        android:textAppearance="?android:attr/textAppearanceSmall" />
 
     <TextView
         android:layout_width="wrap_content"
