--- a/app/src/main/res/layout/single_request_layout.xml
+++ b/app/src/main/res/layout/single_request_layout.xml
@@ -7,7 +7,7 @@
     <de.hdodenhof.circleimageview.CircleImageView
         android:layout_width="64dp"
         android:layout_height="64dp"
-        android:src="@drawable/ic_face_black_64dp"
+        android:src="@mipmap/ic_avatar"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
@@ -29,25 +29,26 @@
         android:textSize="18sp"
         android:textStyle="bold" />
 
-    <TextView
-        android:id="@+id/user_single_status"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignEnd="@+id/user_single_name"
-        android:layout_alignLeft="@+id/user_single_name"
-        android:layout_alignRight="@+id/user_single_name"
-        android:layout_alignStart="@+id/user_single_name"
-        android:layout_below="@+id/user_single_name"
-        android:text="Default Status"
-        android:visibility="invisible" />
+    <!--<TextView-->
+        <!--android:id="@+id/user_single_status"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_alignEnd="@+id/user_single_name"-->
+        <!--android:layout_alignLeft="@+id/user_single_name"-->
+        <!--android:layout_alignRight="@+id/user_single_name"-->
+        <!--android:layout_alignStart="@+id/user_single_name"-->
+        <!--android:layout_below="@+id/user_single_name"-->
+        <!--android:text="Default Status"-->
+        <!--android:visibility="invisible" />-->
 
     <Button
         android:id="@+id/accept_request_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/user_single_status"
-        android:layout_alignStart="@+id/user_single_status"
-        android:layout_below="@+id/user_single_status"
+        android:layout_alignLeft="@+id/user_single_name"
+        android:layout_alignRight="@+id/user_single_name"
+        android:layout_alignStart="@+id/user_single_name"
+        android:layout_below="@+id/user_single_name"
         android:background="#388E3C"
         android:text="Accept"
         android:textColor="#FFFFFF"
@@ -57,18 +58,19 @@
         android:id="@+id/send_request_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/user_single_status"
-        android:layout_alignStart="@+id/user_single_status"
-        android:layout_below="@+id/user_single_status"
-        android:background="#1976D2"
-        android:text="Sent"
+        android:layout_alignLeft="@+id/user_single_name"
+        android:layout_alignRight="@+id/user_single_name"
+        android:layout_alignStart="@+id/user_single_name"
+        android:layout_below="@+id/user_single_name"
+        android:background="#d32f2f"
+        android:text="Cancel"
         android:textColor="#FFFFFF" />
 
     <Button
         android:id="@+id/decline_request_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/user_single_status"
+        android:layout_below="@+id/user_single_name"
         android:layout_marginLeft="11dp"
         android:layout_marginStart="11dp"
         android:layout_toEndOf="@+id/accept_request_button"
