--- a/app/src/main/res/layout/activity_note.xml
+++ b/app/src/main/res/layout/activity_note.xml
@@ -13,7 +13,7 @@
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/note_et_title"
+        android:id="@+id/note_title_edittext"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
@@ -28,12 +28,12 @@
         android:layout_height="wrap_content"
         android:inputType="textMultiLine"
         android:ems="10"
-        android:id="@+id/note_et_content"
-        android:layout_below="@+id/note_et_title"
+        android:id="@+id/note_content_edittext"
+        android:layout_below="@+id/note_title_edittext"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_alignRight="@+id/note_et_title"
-        android:layout_alignEnd="@+id/note_et_title"
+        android:layout_alignRight="@+id/note_title_edittext"
+        android:layout_alignEnd="@+id/note_title_edittext"
         android:layout_alignParentBottom="true"
         android:hint="enter your note"
         android:gravity="top"/>
